# device-setup

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  setup.sh  tailwind.config.js
distribution/: device-setup-detector.service  device-setup.service
i18n/: en-US.ftl  es-ES.ftl
src/: api.rs  main.rs  translations.rs  vars.rs  web_interface.rs  wifi_handler.rs
src/detector/: main.rs
src/detector/execution/: mod.rs  systemd.rs
src/detector/network/: mod.rs  networkmanager.rs
src/http/: api.rs  mod.rs  translations.rs  web_interface.rs
src/os/: mod.rs  wifi.rs  wifi_handler.rs
src/os/wifi/: mod.rs  networkmanager.rs
templates/: setup.html
