[package]
name = "device-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
actix-web = "^4.0.1"
networkmanager = "^0.3"
dbus = "^0.9"
dbus-tokio = "^0.7"
fluent = "^0.16"
futures = "^0.3"
serde = {version = "^1.0", features = ["derive"]}
thiserror = "^1.0"
unic-langid = {version = "^0.9", features = ["macros"]}
uuid = {version = "^1.0", features = ["v4"]}
askama = "^0.11"