[package]
name = "device-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sailfish = "0.8.3"
actix-web = "^4.0.1"
fluent = "^0.16"
unic-langid = {version = "^0.9", features = ["macros"]}

# Network
networkmanager = "^0.3"
dbus = "^0.9"
dbus-tokio = "^0.7"

async-trait = "^0.1"
futures = "^0.3"
serde = {version = "^1.0", features = ["derive"]}
thiserror = "^1.0"
uuid = {version = "^1.0", features = ["v4"]}
lazy_static = "1.4"


[build-dependencies]
html-minifier = "^3.0"

[[bin]]
name = "device-setup"
path = "src/main.rs"

[[bin]]
name = "device-setup-detector"
path = "src/detector/main.rs"

[features]
default = ["systemd", "networkmanager"]
systemd = []
