[package]
name = "device-setup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sailfish = "0.8.3"
actix-web = "^4.0.1"
fluent = "^0.16"
unic-langid = {version = "^0.9", features = ["macros"]}

# Network
dbus = {version="^0.9", optional=true}
dbus-tokio = {version="^0.7", optional=true}

async-trait = "^0.1"
futures = "^0.3"
serde = {version = "^1.0", features = ["derive"]}
thiserror = "^1.0"
uuid = {version = "^1.0", features = ["v4"]}
lazy_static = "1.4"
tokio = {version = "1.35.0", features =["sync"]}
local-ip-address = "0.5.6"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
html-minifier = "^3.0"

[[bin]]
name = "device-setup"
path = "src/main.rs"

[[bin]]
name = "device-setup-detector"
path = "src/detector/main.rs"

[features]

default = ["systemd", "networkmanager"]

#Init systems, choose one
systemd = []

#Network systems, choose one
networkmanager = ["dbus", "dbus-tokio"]
